kubernetes/skywalker/application/grafana/grafana.virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: grafana

spec:
  gateways:
    - cluster/feldman-in
  hosts:
    - grafana.feldman.in
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: grafana
            port:
              number: 3000
